@@ -5,6 +5,8 @@ import java.awt.Color;
 import java.awt.Font;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.WindowAdapter;
+import java.awt.event.WindowEvent;
 import java.util.ArrayList;
 
 import javax.swing.JCheckBox;
@@ -69,19 +71,46 @@ public class EnergySkateParkBasicsModule extends AbstractEnergySkateParkModule {
         energyGraphControlPanel = new ControlPanelNode( new VBox(
                 new PText( "Energy Graphs" ) {{setFont( TITLE_FONT );}},
 
-                //Button to show the bar graph
-                new TextButtonNode( "Bar Chart" ) {{
+//                //Button to show the bar graph
+//                new TextButtonNode( "Bar Chart" ) {{
+//                    setFont( CONTROL_FONT );
+//                    addActionListener( new ActionListener() {
+//                        public void actionPerformed( ActionEvent e ) {
+//                            setBarChartVisible( true );
+//
+//                            //Move the bar graph to the bottom right of the frame so it doesn't obscure the play area, and so it isn't too far from the play area
+//                            //Or the button that launched it
+//                            barChartDialog.setLocation( phetFrame.getX() + phetFrame.getWidth() - barChartDialog.getWidth(), phetFrame.getY() + phetFrame.getHeight() - barChartDialog.getHeight() );
+//                        }
+//                    } );
+//                }},
+
+                //Checkbox to show/hide bar chart
+                new PSwing( new JCheckBox( "Bar Chart", isBarChartVisible() ) {{
                     setFont( CONTROL_FONT );
                     addActionListener( new ActionListener() {
                         public void actionPerformed( ActionEvent e ) {
-                            setBarChartVisible( true );
-
-                            //Move the bar graph to the bottom right of the frame so it doesn't obscure the play area, and so it isn't too far from the play area
-                            //Or the button that launched it
-                            barChartDialog.setLocation( phetFrame.getX() + phetFrame.getWidth() - barChartDialog.getWidth(), phetFrame.getY() + phetFrame.getHeight() - barChartDialog.getHeight() );
+                            setBarChartVisible( isSelected() );
                         }
                     } );
-                }},
+                    addResetListener( new VoidFunction0() {
+                        public void apply() {
+                            setSelected( isPieChartVisible() );
+                        }
+                    } );
+                    // set the check box state when the dialog is closed via its window dressing
+                    barChartDialog.addWindowListener( new WindowAdapter() {
+                        // called when the close button in the dialog's window dressing is clicked
+                        public void windowClosing( WindowEvent e ) {
+                            setSelected( isPieChartVisible() );
+                        }
+
+                        // called by JDialog.dispose
+                        public void windowClosed( WindowEvent e ) {
+                            setSelected( isPieChartVisible() );
+                        }
+                    } );
+                }} ),
 
                 //Checkbox to show/hide the pie chart
                 new PSwing( new JCheckBox( "Pie Chart", isPieChartVisible() ) {{
